--- a/PigDice/Base.lproj/Main.storyboard
+++ b/PigDice/Base.lproj/Main.storyboard
@@ -38,6 +38,9 @@
                                 <state key="normal" title="Roll">
                                     <color key="titleColor" red="0.99993699790000001" green="1" blue="0.99987250569999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="rollButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ojt-iY-J3B"/>
+                                </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="DiceOne" translatesAutoresizingMaskIntoConstraints="NO" id="PBh-3K-iPT">
                                 <rect key="frame" x="258" y="335" width="120" height="120"/>
@@ -48,8 +51,8 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="diceImageView1" destination="wLs-6C-rQ0" id="JJk-xj-M7o"/>
-                        <outlet property="diceImageView2" destination="PBh-3K-iPT" id="wXt-dW-05F"/>
+                        <outlet property="leftDiceView" destination="PBh-3K-iPT" id="wXt-dW-05F"/>
+                        <outlet property="rightDiceView" destination="wLs-6C-rQ0" id="JJk-xj-M7o"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
